load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "changelog.go",
        "commit.go",
        "linter.go",
        "root.go",
    ],
    importpath = "github.com/epsxy/aurora/pkg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/git",
        "//pkg/prompt",
        "@com_github_spf13_cobra//:cobra",
    ],
)
