load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "parser",
    srcs = [
        "changelog.go",
        "env.go",
    ],
    importpath = "github.com/epsxy/aurora/pkg/parser",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/git",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
